--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   margin: 50px 0px 0px 150px;
 }
 .int{
@@ -23,4 +23,4 @@ table {
   text-align: left;
   height: 30px;
   width: 297px;
-}
+} */
